--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -15,7 +15,7 @@
 	<h5><%= @item.code %></h5>
 	<br>
 
-	<div id="upload">
+	<div class="upload">
 
 		<%= form_for @image, url: {action: "create"} do |f| %>
 
