--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -1,4 +1,5 @@
 $bg-color: rgba(255,255,255,0.9);
+$bg-color-red: rgba(255,200,200,0.5);
 
 body.admin {
 
@@ -44,6 +45,18 @@ body.admin {
 				};
 
 			};
+		};
+
+		a {
+			color: red;
+		};
+
+		a:hover {
+			color: red;
+		};
+
+		a:visited {
+			color: red;
 		};
 
 		#header {
@@ -99,7 +112,7 @@ body.admin {
 					margin-bottom: 5px;
 					padding: 5px;
 					border: solid gray 1px;
-					background-color: rgba(255,200,200,0.5);
+					background-color: $bg-color-red;
 				};
 
 			};
@@ -120,7 +133,7 @@ body.admin {
 					margin-bottom: 5px;
 					padding: 5px;
 					border: solid gray 1px;
-					background-color: rgba(255,200,200,0.5);
+					background-color: $bg-color-red;
 				};
 
 			};
@@ -165,7 +178,7 @@ body.admin {
 				margin-left: auto;
 				margin-right: auto;
 				border: solid black 1px;
-				background-color: rgba(255,200,200,0.5);
+				background-color: $bg-color-red;
 			};
 
 		};
@@ -180,11 +193,12 @@ body.admin {
 
 		#manage-items {
 			width: 90%;
-			height: 185px;
+			/*height: 185px;*/
 			margin-top: 20px;
 			margin-left: auto;
 			margin-right: auto;
 			background-color: $bg-color;
+			padding: 10px;
 			border: solid black 1px;
 
 			h4 {
@@ -205,7 +219,7 @@ body.admin {
 
 		#admin-profile {
 			width: 90%;
-			height: 150px;
+			/*height: 150px;*/
 			margin-top: 20px;
 			margin-left: auto;
 			margin-right: auto;
@@ -238,7 +252,7 @@ body.admin {
 
 	/*=======================================================================*/
 
-	@media (min-width: 500px) {
+	@media (min-width: 1000px) {
 
 		.manage-cat-keys {
 			width: 25%;
