--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,8 +1,10 @@
 <body class="item">
 
 <% if (session[:is_admin] != 'true') %>
+
 	<h2>Sorry, you do not have permission to access this page.</h2>
 	<h4>Please <a href="/login">login</a> to continue</h4>
+
 <% else %>
 
 	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/admin">ADMIN CENTER</a></h5>
@@ -14,32 +16,36 @@
 		<%= form_for @item, url: {action: "create"} do |f| %>
 			
 			<%= f.label :code, "* Code" %>
-			<%= f.text_field :code %>
+			<%= f.text_field :code %><br>
 			<%= f.label :caption, "* Caption" %>
-			<%= f.text_field :caption %>
+			<%= f.text_field :caption %><br>
 			<%= f.label :condition, "Condition" %>
-			<%= f.text_field :condition %>
+			<%= f.text_field :condition %><br>
 			<%= f.label :measurements, "Measurements" %>
-			<%= f.text_field :measurements %>
+			<%= f.text_field :measurements %><br>
 			<%= f.label :date_acquired, "Date Acquired" %>
-			<%= f.date_field :date_acquired %>
+			<%= f.date_field :date_acquired %><br>
 			<%= f.label :date_sold, "Date Sold" %>
-			<%= f.date_field :date_sold %>
+			<%= f.date_field :date_sold %><br>
 			<%= f.label :purchase_price, "Purchase Price" %>
-			<%= f.text_field :purchase_price, {:class => "short"} %>
+			<%= f.text_field :purchase_price, {:class => "short"} %><br>
 			<%= f.label :selling_price, "Selling Price" %>
-			<%= f.text_field :selling_price, {:class => "short"} %>
+			<%= f.text_field :selling_price, {:class => "short"} %><br>
 			<%= f.label :description, "* Description", {:class => "large"} %>
-			<%= f.text_area :description %>
+			<%= f.text_area :description %><br>
 
 			<%= f.label :is_available, "Item Available?" %>
 			<%= f.radio_button(:is_available, "true", {:class => "very_short"}) %>
 			<%= f.label(:is_available, "Yes", {:class => "very_short"}) %>
 			<%= f.radio_button(:is_available, "false", {:class => "very_short"}) %>
-			<%= f.label(:is_available, "No", {:class => "very_short"}) %>
+			<%= f.label(:is_available, "No", {:class => "very_short"}) %><br>
 			
-			<div id="submit"><%= f.submit "Create", {:class => "button"}  %></div>
+			<div class="submit" id="submit">
+				<%= f.submit "Create", {:class => "button"}  %>
+			</div>
 		<% end %>
+
+	</div>
 
 <% end %>
 
